[tool.poetry]
name = "fastapi-utils"
version = "0.1.0"
description = ""
authors = ["Aleksey Dalekin <alex@nbs.vc>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = ">=0.68.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
