[tool.poetry]
authors = ["Aleksey Dalekin <alex@nbs.vc>"]
description = ""
name = "fastapi-utils"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = ">=0.68.1"
python = "^3.7"
timezones = {git = "https://github.com/adalekin/timezones.git", branch = "master"}

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
